modificaciones en home

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,5 +14,12 @@
 
 
 <ion-content padding>
-
+<ion-grid>
+  <ion-row>
+    <ion-col offset-4 col-4>
+      <h2>Welcome to</h2>
+      <img src="" alt="">
+    </ion-col> 
+  </ion-row>
+</ion-grid>
 </ion-content>
