--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,13 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+    <ion-content padding class="fondo">
+    <ion-grid>
+      <ion-row center text-center>
+        <ion-col col-12>
+          <h1>Welcome to</h1>
+          <img src="assets/imgs/logoceek.png" title="Ceek"><br>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
-</ion-content>
+          <a href=""><img src="assets/imgs/fbconnect.png" title="Ceek" width="200px;"></a>
+          
+        </ion-col> 
+      </ion-row>
+    </ion-grid>
+    </ion-content>
