--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,8 +6,10 @@
           <img src="assets/imgs/logoceek.png" title="Ceek"><br>
 
           <a href=""><img src="assets/imgs/fbconnect.png" title="Ceek" width="200px;"></a>
-          
-        </ion-col> 
+          </ion-col>
+        <ion-col col-12>
+            <button ion-button color="light" outline>LOGIN</button>   
+        </ion-col>  
       </ion-row>
     </ion-grid>
     </ion-content>
