--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 
           <a href=""><img src="assets/imgs/fbconnect.png" title="Ceek" width="200px;"></a>
           </ion-col>
-        <ion-col col-12>
+        <ion-col col-10 offset-1>
             <button ion-button color="light" outline>LOGIN</button>   
         </ion-col>  
       </ion-row>
