--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,15 +1,23 @@
     <ion-content padding class="fondo">
     <ion-grid>
       <ion-row center text-center>
-        <ion-col col-12>
-          <h1>Welcome to</h1>
-          <img src="assets/imgs/logoceek.png" title="Ceek"><br>
-
+        <ion-col col-12 padding>
+          <h1 padding>Welcome to</h1>
+        </ion-col>
+        <ion-col col-12 padding>
+            <img src="assets/imgs/logoceek.png" title="Ceek"><br>  
+        </ion-col> 
+        <ion-col col-12 padding>
           <a href=""><img src="assets/imgs/fbconnect.png" title="Ceek" width="200px;"></a>
-          </ion-col>
-        <ion-col col-10 offset-1>
-            <button ion-button color="light" outline>LOGIN</button>   
+        </ion-col>
+        <ion-col col-10 offset-1 padding>
+            <button ion-button color="light" outline (click)="goLogin()">LOGIN</button>   
         </ion-col>  
       </ion-row>
+      <ion-row center text-center>
+        <ion-col col-12>
+            <button ion-button color="light" clear (click)="goSignUp()">Sign Up Now</button>
+        </ion-col>
+      </ion-row>  
     </ion-grid>
     </ion-content>
