--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,22 +4,55 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-content padding class="fondo" >
+    <ion-buttons start color="light" clear >
+      <button ion-button (click)="goBack()" color="light" clear><ion-icon name="arrow-round-back"></ion-icon> 
+        Back</button>            
+    </ion-buttons>
+      <ion-grid>
+        <ion-row center text-center>
+          <ion-col col-12>
+            <h1>Login in</h1>
+            <br>
+            <a href=""><img src="assets/imgs/fbconnect.png" title="Ceek" width="200px;"></a>
+          </ion-col>
+        </ion-row>
 
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
+        <ion-row align-items-center justify-content-center>
+            <ion-col col-12 col-sm-6 col-md-4 col-lg-3>
+                <form class="centrado">
+                    <ion-list>
+                        <ion-item class="tansparent">
+                          <ion-icon name="person" item-start></ion-icon>
+                          <ion-input type="text" placeholder="Email or Ceeker ID"></ion-input>
+                        </ion-item>
+                        <ion-item class="tansparent">
+                          <ion-icon name="lock" item-start></ion-icon>
+                          <ion-input type="password" placeholder="Pasword"></ion-input>
+                        </ion-item>
+                        <br>
+                        <p>forgot password?<button ion-button clear>Reset</button></p> 
+                        <ion-item class="tansparent">
+                            <ion-label> Keep me</ion-label>
+                            <ion-toggle disabled checked="true"></ion-toggle>
+                        </ion-item>
+                        <br>
+                        <br>
+                        <ion-item class="tansparent">
+                            <ion-icon name="star" item-start></ion-icon>
+                            <!--<ion-label stacked>Apellidos:</ion-label>-->
+                            <ion-input type="text" placeholder="Promo"></ion-input>
+                        </ion-item>
+                        <br>
+                        <button ion-button color="light" outline>OK</button>
+                        <br>
+                        <ion-item class="tansparent" center text-center>
+                          <button ion-button color="light" clear (click)="goSignUp()">Sign Up Now</button>
+                        </ion-item>  
+                    </ion-list>
+                </form>
+            </ion-col>
+        </ion-row>
+      </ion-grid>
 
-</ion-header>
-
-
-<ion-content padding>
-<ion-grid>
-  <ion-row>
-    <ion-col offset-4 col-4>
-      <h2>Welcome to</h2>
-      <img src="" alt="">
-    </ion-col> 
-  </ion-row>
-</ion-grid>
 </ion-content>
