--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -1,18 +1,7 @@
-<!--
-  Generated template for the SignUpPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>sign_up</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-
+    <ion-buttons start color="light" clear >
+        <button ion-button (click)="goBack()" color="light" clear><ion-icon name="arrow-round-back"></ion-icon> 
+          Back</button>            
+      </ion-buttons>
+      
 </ion-content>
