creacion de vistasphoto-up,reset-pass,reset_conf,sign-up,terms

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@
           <a href=""><img src="assets/imgs/fbconnect.png" title="Ceek" width="200px;"></a>
         </ion-col>
         <ion-col col-10 offset-1 padding>
-            <button ion-button color="light" outline (click)="goLogin()">LOGIN</button>   
+            <button ion-button color="light" outline (click)="goLogin()" class="btn50">LOGIN</button>   
         </ion-col>  
       </ion-row>
       <ion-row center text-center>
