--- a/src/pages/terms/terms.html
+++ b/src/pages/terms/terms.html
@@ -1,22 +1,20 @@
-<ion-content padding>
+<ion-content padding class="fondo">
     <ion-buttons start color="light" clear >
         <button ion-button (click)="goBack()" color="light" clear><ion-icon name="arrow-round-back"></ion-icon> 
-          Back</button>            
+          &nbsp;Back</button>            
     </ion-buttons>
     <ion-grid>
-      <ion-row justify-content-center>
-        <ion-col col-12 col-md-8>
-          <h1>Terms of Service</h1>
-          <p><b>Overview</b></p>
+      <ion-row align-items-center justify-content-center>
+        <ion-col col-12 col-sm-6 col-md-4 col-lg-3>
+          <h1 center text-center>Terms of Service</h1>
+          <p center text-center><b>Overview</b></p>
           <p>
               Welcome to CEEK VR INC! We are a developer of virtual reality experiences streamed to mobile VR devices and other console, desktop virtual reality devices (“CEEK VR ready devices”).
               These Terms of Use govern your use of our service. As used in these Terms of Use, “ CEEK VR INC service,” “our service” or “the service” means the service provided by CEEK VR SOFTWARE AND HARDWARE for discovering and experiencing virtual reality, including all features and functionalities, website, and user interfaces, as well as all content and software associated with our service.
               Using the Software As long as you comply with these Terms, you have the right to use the Software for your own personal noncommercial use. This license is for the sole purpose of enabling you to use and enjoy the Software, in the manner permitted by these Terms
               When you download our Software from Google Play or other app store or distribution platform you acknowledge and agree that you must also comply with all applicable third party terms of service when using our software or applications.
           </p>
-          <p>
-            <b>Using the software</b>
-          </p>
+          <p center text-center><b>Using the software</b></p>
         </ion-col> 
       </ion-row>
     </ion-grid>
