cambio de funciones para la navegacion

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,12 +11,12 @@
           <a href=""><img src="assets/imgs/fbconnect.png" title="Ceek" width="200px;"></a>
         </ion-col>
         <ion-col col-10 offset-1 padding>
-            <button ion-button color="light" outline (click)="goLogin()" class="btn50">LOGIN</button>   
+            <button ion-button color="light" outline (click)="go('login')" class="btn50">LOGIN</button>   
         </ion-col>  
       </ion-row>
       <ion-row center text-center>
         <ion-col col-12>
-            <button ion-button color="light" clear (click)="goSignUp()">Sign Up Now</button>
+            <button ion-button color="light" clear (click)="go('signUp')">Sign Up Now</button>
         </ion-col>
       </ion-row>  
     </ion-grid>
