--- a/src/pages/reset-comf/reset-comf.html
+++ b/src/pages/reset-comf/reset-comf.html
@@ -1,18 +1,8 @@
-<!--
-  Generated template for the ResetComfPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<!--<ion-header>
-
-  <ion-navbar>
-    <ion-title>reset-comf</ion-title>
-  </ion-navbar>
-
-</ion-header>-->
-
 <ion-content padding class="fondo">
+    <ion-buttons start color="light" clear >
+        <button ion-button (click)="goBack()" color="light" clear><ion-icon name="arrow-round-back"></ion-icon> 
+          &nbsp;Back</button>            
+      </ion-buttons>
   <ion-grid>
     <ion-row center text-center>
       <ion-col col-12>
